--- a/TV.html
+++ b/TV.html
@@ -11,7 +11,7 @@
 	   <a href="#" class="logo">RoYal</a>
 	   <ul>
 	   <li><a href="index.html">HOME</a></li>
-	   <li><a href="#">ABOUT</a></li>
+	   <li><a href="about.html">ABOUT</a></li>
 	   <li><a href="#">SERVICE</a></li>
 	   <li><a href="#">CONTACT</a></li>
 	   </ul>
