--- a/dress.html
+++ b/dress.html
@@ -24,7 +24,7 @@
 <p class="time">New</p>
 		  
 <div class="img-box">
-<img src="images2/dress10.JFIF">
+<img src="images2/dress10.jfif">
 </div>
 <p class="detail">white summer dress
 <a href="#" class="price">Price-300EGP</a>
