--- a/log in.html
+++ b/log in.html
@@ -40,7 +40,7 @@
             <h1>Online shopping  </h1> 
             <p class="par">I Wanna it , I get it</p>
 
-                <button class="cn"><a href="#">JOIN US</a></button>
+                <button class="cn"><a href="signup.html">JOIN US</a></button>
 
                 <div class="form">
                     <h2>Login Here</h2>
@@ -49,7 +49,7 @@
                     <button class="btnn"><a href="#">Login</a></button>
 
                     <p class="link">Don't have an account<br>
-                    <a href="#">Sign up </a> here</a></p>
+                    <a href="signup.html">Sign up </a> here</a></p>
                     <p class="liw">Log in with</p>
 
                     <div class="icons">
